[project]
name = "eppv-github-io"
version = "0.1.0"
description = "Personal GitHub Pages"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "python-dotenv>=1.1.1",
    "starlette>=0.47.1",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]
